--- a/Html/q06_livro/pagina.html
+++ b/Html/q06_livro/pagina.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gama Academy</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            border: 1px solid;
+            background-color: white !important;
+        }
+        .azul {
+            color:blue;
+        }
+        .centralizado{
+            text-align: center;
+        }
+    </style>
 </head>
+
 <body>
+    <!--Área Visível-->
+    <a href="#cap1">Capitulo 1</a>
+       <h1 class="azul centralizado">Olá, Mundo!</h1>
+       <h2>Olá, Mundo!</h2>
+       <h3>Olá, Mundo!</h3>
+       <h4 class="centralizado">Olá, Mundo!</h4>
+       <h5>Olá, Mundo!</h5>
+       <h6 class="azul centralizado">Olá, Mundo!</h6>
+       <p>Olá, Mundo!</p>
+    <a href="https://www.google.com/">Google</a>
+    <div>
+        <img src="_img/lerolero.jpeg" alt="ovelha do site lero lero">
+    </div>
+
+    <h1 id="capitulo1" style="background-color: beige;">Estratégias em um Novo Paradigma Globalizado</h1>
+    <p id="paragrafo1">
+        <b>Caros amigos,</b>
+        <i>execução dos pontos do programa agrega</i>
+        <u>valor ao estabelecimento do sistema de formação</u>
+        <s>de quadros que corresponde às necessidades.</s>
+        <br>
+        <mark>Por outro lado, o desenvolvimento contínuo de distintas formas de atuação</mark>
+    <blockquote>"cumpre um papel essencial na formulação das diversas correntes de pensamento." - fonte
+    </blockquote>
+    <code>
+        Pensando mais a longo prazo, a percepção das dificuldades desafia a capacidade de equalização dos modos de operação convencionais.
+        </code>
+        A nível organizacional, a expansão dos mercados mundiais estimula a padronização das regras de conduta normativas.
+    </p>
+
+    <p>H<sub>2</sub>O</p>
+    <p>H<sup>2</sup>O</p>
+    <button>Enviar</button>
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
+    <ol>
+        <a href="Exercicios/q01.html">
+            <li>Exercício 1</li>
+        </a>
+        <a href="Exercicios/q02.html">
+            <li>Exercício 2</li>
+        </a>
+        <a href="Exercicios/q03.html">
+            <li>Exercício 3</li>
+        </a>
+        <a href="Exercicios/q04.html">
+            <li>Exercício 4</li>
+        </a>
+        <a href="Exercicios/q05.html">
+            <li>Exercício 5</li>
+        </a>
+    </ol>
+
+    <p id="paragrafo2">Gostaria de enfatizar que a consulta aos diversos militantes obstaculiza a apreciação da
+        importância das novas proposições. No mundo atual, o julgamento imparcial das eventualidades ainda não
+        demonstrou convincentemente que vai participar na mudança dos métodos utilizados na avaliação de resultados. O
+        cuidado em identificar pontos críticos no fenômeno da Internet facilita a criação dos paradigmas corporativos.
+    </p>
+
+    <p id="paragrafo3">Evidentemente, a crescente influência da mídia não pode mais se dissociar das condições
+        inegavelmente apropriadas. Acima de tudo, é fundamental ressaltar que o novo modelo estrutural aqui preconizado
+        garante a contribuição de um grupo importante na determinação do processo de comunicação como um todo. A prática
+        cotidiana prova que a constante divulgação das informações estende o alcance e a importância das formas de ação.
+    </p>
+
     <table>
         <thead>
             <tr>
@@ -17,27 +100,134 @@
         </thead>
         <tbody>
             <tr>
-                <td>Ana</td>
-                <td>20</td>
-                <td>biologia</td>
-            </tr>
+                <td>Ana</td>    <td>20</td>    <td>biologia</td></tr>
             <tr>
-                <td>matheus</td>
-                <td>19</td>
-                <td>geografia</td>
-            </tr>
+                <td>matheus</td>    <td>19</td>    <td>geografia</td></tr>
             <tr>
-<td>Nasser</td>
-                <td>21</td>
-                <td>arquivologia</td>
-            </tr>
+                <td>Nasser</td>    <td>21</td>    <td>arquivologia</td></tr>
             <tr>
-                <td>João</td>
-                <td>22</td>
-                <td>tecnologia</td>
-            </tr>
+                <td>João</td>    <td>22</td>    <td>tecnologia</td></tr>
         </tbody>
         <tfoot></tfoot>
     </table>
+
+    <form id="formulario" action="#formulario" method="GET">
+        <h1>Formulário</h1>
+        <fieldset>
+            <legend>Login</legend>
+            <div>
+                <label for="nome">Nome:</label>
+                <input id="nome" name="nome_variavel" placeholder="Insira seu nome">
+            </div>
+            <br>
+            <div>
+                <label for="senha">Senha:</label>
+                <input type="password" id="senha" name="senha_variavel" placeholder="Insira uma senha de 8 dígitos" minlength="8">
+            </div>
+        </fieldset>
+        <br>
+        <fieldset>
+            <legend>Cadastro</legend>
+            <div>
+                <input type="radio" id="radio_a" name="opcao" value="dados">
+                <label for="radio_a">analista</label>
+
+                <input type="radio" id="radio_b" name="opcao" value="desenvolvimento">
+                <label for="radio_b">frontend</label>
+                
+                <input type="radio" id="radio_c" name="opcao" value="desenvolvimeto">
+                <label for="radio_c">backend</label>
+            </div>
+            <br>
+            <div>
+                <input type="checkbox" id="checkbox_a" name="filhos" value="true">
+                <label for="checkbox_a">tem filhos</label>
+
+                <input type="checkbox" id="checkbox_b" name="cachorro" value="true">
+                <label for="checkbox_b">tem cachorro</label>
+                
+                <input type="checkbox" id="checkbox_c" name="gato" value="true">
+                <label for="checkbox_c">tem gato</label>
+            </div>
+            <br>
+            <div>
+                <label for="color">Cor preferida?</label>
+                <input type="color" value="#ffffff" id="color" name="cor_preferida">
+            </div>
+            <br>
+            <div>
+                <label for="nascimento">Data de nascimento</label>
+                <input type="date" id="nascimento" name="nascimento">
+            </div>
+            <br>
+            <div>
+                <label for="nascimento">Hora do nascimento</label>
+                <input type="time" id="h_nascimento" name="h_nascimento">
+            </div>
+            <br>
+            <div>
+                <label for="dh_nascimento">Data e Hora do nascimento</label>
+                <input type="datetime-local" id="dh_nascimento" name="dh_nascimento">
+            </div>
+            <br>
+            <div>
+                <label for="email">Email para contato</label>
+                <input type="email" id="email" name="email">
+            </div>
+            <br>
+            <div>
+                <label for="telefone">Telefone para contato</label>
+                <input type="tel" id="telefone" name="telefone">
+            </div>
+            <br>
+            <div>
+                <label for="file">Anexe seu CV</label>
+                <input type="file" id="file" name="file">
+            </div>
+            <br>
+            <div>
+                <label for="number">Idade</label>
+                <input type="number" id="number" name="number" min="18" max="80" value="20">
+            </div>
+            <br>
+            <div>
+                <label for="volume">Volume</label>
+                <input type="range" id="volume" min="0" max="10" step="2">
+            </div>
+            <br>
+            <div>
+                <label for="search">Pesquisa</label>
+                <input type="search" id="search" name="q">
+            </div>
+            <br>
+            <div>
+                <label for="cargo">Cargo</label>
+                <select name="cargo" id="cargo">
+                    <option value="gestor">Gestor</option>
+                    <optgroup label="Desenvolvimento">
+                        <option value="frontend">Front-end</option>
+                        <option value="backend">Back-end</option>
+                    </optgroup>
+                    <optgroup label="Dados">
+                        <option value="analista">Analista</option>
+                    </optgroup>
+                </select>
+            </div>
+            <br>
+            <div>
+                <label for="text">Assunto</label>
+                <input type="text" id="text" name="text">
+            </div>
+            <br>
+            <div>
+                <label for="text">Reclamações</label>
+                <br>
+                <textarea cols="20" rows="5"></textarea> 
+            </div>
+        </fieldset>
+        <br>
+        <input type="submit" value="Enviar">
+    </form>
 </body>
+
 </html>
